update gradle, fixed overflow in wave display